Ensure sidebar types with missing icons stay aligned

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,6 +218,7 @@ td.keys {
 }
 
 .sidebar-icon {
+  display: inline-block;
   margin-right: 5px;
   width: 18px;
   &.octicon-primitive-dot {
